--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.6.2",
+    "@google/generative-ai": "^0.14.1",
     "cohere-ai": "^6.2.2",
     "eventsource": "^2.0.2",
     "js-tiktoken": "^1.0.7",
